fix: Fix the alignment of login text

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ input:focus {
   font-family: 'Gotico-Antiqua';
   font-size: 160px;
   position: absolute;
-  box-shadow: 10px 0px 30px -10px #000000;
+  box-shadow: 10px 0px 30px -10px #000;
 }
 
 .credits {
@@ -96,8 +96,7 @@ input:focus {
   width: 100vw;
   padding-left: 64px;
   background: #fff;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
-    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  box-shadow: #00000035 0px 2px 4px 0px, #00000035 0px 2px 16px 0px;
 }
 
 .caption {
@@ -134,6 +133,7 @@ input:focus {
   border: none;
   border-radius: 6px;
   padding: 20px 48px;
+  margin-bottom: -20px;
   cursor: pointer;
   box-shadow: #0000002b 0px -23px 25px 0px inset,
     #00000026 0px -36px 30px 0px inset, #0000001a 0px -79px 40px 0px inset,
@@ -147,5 +147,4 @@ input:focus {
 
 .log-in {
   color: #2c5945;
-  text-decoration: none;
 }
